k8s/network/allow-auth-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-to-mongo
  namespace: restauranty
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth
      ports:
        - protocol: TCP
          port: 27017
