k8s/network/allow-frontend-to-auth.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-auth
  namespace: restauranty
spec:
  podSelector:
    matchLabels:
      app: auth
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 3001 # adjust if auth listens on a different port
