k8s/network/allow-frontend-to-items.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-items
  namespace: restauranty
spec:
  podSelector:
    matchLabels:
      app: items
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 3003 # items service port
