k8s/network/allow-items-to-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-items-to-mongo
  namespace: restauranty
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: items
      ports:
        - protocol: TCP
          port: 27017
